# Match3Game

./: CMakeLists.txt  README.md
.github/instructions/: basic.instructions.md
.github/prompts/: generate-commit-message.prompt.md
docs/: API_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  PROJECT_DOCUMENTATION.md  README.md
include/: Game.h
include/core/: Game.h  GameLogic.h  Scene.h  SceneManager.h
include/ui/: Button.h  GameBoard.h  MainMenu.h  SettingsButton.h  SettingsScene.h  StartButton.h
include/utils/: ColorManager.h  GameConfig.h  KeyboardMonitor.h  RoundedRectangle.h
src/: Game.cpp  main.cpp
src/core/: Game.cpp  GameLogic.cpp  SceneManager.cpp
src/ui/: Button.cpp  GameBoard.cpp  MainMenu.cpp  SettingsButton.cpp  SettingsScene.cpp  StartButton.cpp
src/utils/: ColorManager.cpp  GameConfig.cpp  KeyboardMonitor.cpp  RoundedRectangle.cpp
